fluxcd/apps/overlays/production/quay/postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quay-postgres
spec:
  replicas: 3
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      containers:
      - name: postgres
        image: docker.jcr.pcfae.com/postgres:15
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 20Gi
