fluxcd/apps/overlays/production/quay/quay-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quay
spec:
  replicas: 3
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      containers:
      - name: quay
        image: quay.jcr.pcfae.com/projectquay/quay:latest
  volumeClaimTemplates:
  - metadata:
      name: quay-storage
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 50Gi
