fluxcd/apps/overlays/production/quay/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quay
spec:
  parentRefs:
  - name: cell-membrane-gateway
    namespace: king-of-red-lions
  hostnames:
  - "quay.prplanit.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: quay
      port: 8080
